// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchInput - Snapshots > matches snapshot for SearchInput with custom className 1`] = `
<div
  class="relative w-full custom-search"
  data-testid="container"
>
  <input
    class="px-6 py-6 border-border rounded-full bg-gradient-to-b from-background via-background via-60% to-transparent"
    data-testid="search-input"
    placeholder="Search"
    type="text"
    value=""
  />
  <button
    class="border-none bg-transparent absolute right-2 top-1/2 transform text-muted-foreground -translate-y-1/2 w-8 h-8 rounded-full flex items-center justify-center"
    data-testid="search-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
  </button>
</div>
`;

exports[`SearchInput - Snapshots > matches snapshot for SearchInput with custom placeholder 1`] = `
<div
  class="relative w-full"
  data-testid="container"
>
  <input
    class="px-6 py-6 border-border rounded-full bg-gradient-to-b from-background via-background via-60% to-transparent"
    data-testid="search-input"
    placeholder="Search users..."
    type="text"
    value=""
  />
  <button
    class="border-none bg-transparent absolute right-2 top-1/2 transform text-muted-foreground -translate-y-1/2 w-8 h-8 rounded-full flex items-center justify-center"
    data-testid="search-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
  </button>
</div>
`;

exports[`SearchInput - Snapshots > matches snapshot for SearchInput with dropdown children 1`] = `
<div
  class="relative w-full"
  data-testid="container"
>
  <input
    class="px-6 py-6 border-border rounded-full bg-gradient-to-b from-background via-background via-60% to-transparent"
    data-testid="search-input"
    placeholder="Search"
    type="text"
    value=""
  />
  <button
    class="border-none bg-transparent absolute right-2 top-1/2 transform text-muted-foreground -translate-y-1/2 w-8 h-8 rounded-full flex items-center justify-center"
    data-testid="search-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
  </button>
</div>
`;

exports[`SearchInput - Snapshots > matches snapshot for SearchInput with initial value 1`] = `
<div
  class="relative w-full"
  data-testid="container"
>
  <input
    class="px-6 py-6 border-border rounded-full bg-gradient-to-b from-background via-background via-60% to-transparent"
    data-testid="search-input"
    placeholder="Search"
    type="text"
    value="test query"
  />
  <button
    class="border-none bg-transparent absolute right-2 top-1/2 transform text-muted-foreground -translate-y-1/2 w-8 h-8 rounded-full flex items-center justify-center"
    data-testid="search-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
  </button>
</div>
`;

exports[`SearchInput - Snapshots > matches snapshot for default SearchInput 1`] = `
<div
  class="relative w-full"
  data-testid="container"
>
  <input
    class="px-6 py-6 border-border rounded-full bg-gradient-to-b from-background via-background via-60% to-transparent"
    data-testid="search-input"
    placeholder="Search"
    type="text"
    value=""
  />
  <button
    class="border-none bg-transparent absolute right-2 top-1/2 transform text-muted-foreground -translate-y-1/2 w-8 h-8 rounded-full flex items-center justify-center"
    data-testid="search-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
  </button>
</div>
`;
